# chlorine

./: .travis.yml  Cargo.toml  LICENSE-MIT  LICENSE-ZLIB  README.md  appveyor.yml
.github/workflows/: rust.yml
src/: lib.rs
tests/: the_tests.rs  types_present.rs
